added and configured the php symonfy2 resque bundle

--- a/src/ClassCentral/SiteBundle/Resources/config/routing_admin.yml
+++ b/src/ClassCentral/SiteBundle/Resources/config/routing_admin.yml
@@ -1,3 +1,6 @@
+BCCResqueBundle:
+    resource: "@BCCResqueBundle/Resources/config/routing.xml"
+    prefix:   /resque
 ClassCentralSiteBundle_instructor:
     resource: "@ClassCentralSiteBundle/Resources/config/routing/instructor.yml"
     prefix: /instructor
