--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "ircmaxell/password-compat": "dev-master",
-        "mailgun/mailgun-php": "~1.4"
+        "mailgun/mailgun-php": "~1.4",
+        "bcc/resque-bundle": "1.1.*"
     },
     "require-dev":{
       "phpunit/phpunit": "3.7.*"
