--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,15 @@
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "ircmaxell/password-compat": "dev-master",
         "mailgun/mailgun-php": "~1.4",
-        "bcc/resque-bundle": "1.1.*"
+        "bcc/resque-bundle": "1.1.7",
+        "chrisboulton/php-resque": "dev-master as 1.2"
     },
+    "repositories" : [
+        {
+            "type":"git",
+            "url": "https://github.com/classcentral/php-resque.git"
+        }
+    ],
     "require-dev":{
       "phpunit/phpunit": "3.7.*"
     },
