Removed the environment 'resque'
Since switching to a modified fork of php-resque allows to user different databases, no need for a separate environment

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,6 +16,11 @@ framework:
     session:         ~
     fragments:       ~
 
+bcc_resque:
+    redis:
+        host: %redis_host%                      # the redis host
+        port: %redis_port%                      # the redis port
+
 # Twig Configuration
 twig:
     debug:            %kernel.debug%
