--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,7 +6,9 @@ ClassCentralSiteBundle:
     resource: "@ClassCentralSiteBundle/Resources/config/routing.yml"
     prefix: /
      
-
+BCCResqueBundle:
+  resource: "@BCCResqueBundle/Resources/config/routing.xml"
+  prefix:   /admin/resque
 # Internal routing configuration to handle ESI
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
