--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -21,3 +21,7 @@ monolog:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+
+bcc_resque:
+    redis:
+        database: 5                          # the redis database
