Added types and statuses for SchedulerLog

--- a/src/ClassCentral/SiteBundle/Resources/config/doctrine/SchedulerLog.orm.yml
+++ b/src/ClassCentral/SiteBundle/Resources/config/doctrine/SchedulerLog.orm.yml
@@ -33,7 +33,7 @@ ClassCentral\SiteBundle\Entity\SchedulerLog:
             column: job_id
     manyToOne:
         user:
-            targetEntity: Users
+            targetEntity: User
             cascade: {  }
             mappedBy: null
             inversedBy: null
